web/book/tests/documentation/snapshots/documentation__book__reference__syntax__keywords__identifiers--keywords__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from invoices\naggregate (\n    count this\n)\n"
---
SELECT
  COUNT(*)
FROM
  invoices

