web/book/tests/documentation/snapshots/documentation__book__reference__syntax__keywords__identifiers--keywords__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "from invoices\nderive t = this.time\n"
---
SELECT
  *,
  time AS t
FROM
  invoices

